# gtk-gl-shaders

./: .gitignore  Cargo.toml  README.md  flake.nix  meson.build  meson_options.txt  test.js  test.sh
include/: shaderarea.h  testobj.h
src/: lib.rs
src/shader_area/: ffi.rs  imp.rs  mod.rs
src/shaderarea/: ffi.rs  mod.rs
src/testobj/: ffi.rs  imp.rs  mod.rs
