[package]
name = "gtk-gl-shaders"
version = "0.1.0"
edition = "2024"

[lib]
name = "gtkglshaders"
crate-type = ["cdylib"]  

[dependencies]
epoxy = "0.1"          
glib = "0.20"
gobject-sys = "0.20"
gtk = { package = "gtk4", version = "0.9" }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
libloading = "0.9.0"
