[package]
name = "gtk-gl-shaders"
version = "0.1.0"
edition = "2024"

[lib]
name = "gtkglshaders"
crate-type = ["cdylib"]  

[dependencies]
epoxy = "0.1"
glib = { version = "0.20", features = [ "log" ] }
gtk = { package = "gtk4", version = "0.9", features = ["unsafe-assume-initialized"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
libloading = "0.9.0"
log = "0.4.29"
